feat: login page clone
login page clone

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "deliveroo",
-        "opsz",
-        "wght"
-    ]
+  "cSpell.words": ["deliveroo", "opsz", "personalised", "wght"]
 }
