--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["deliveroo", "opsz", "personalised", "wght"]
+  "cSpell.words": [
+    "amet",
+    "bgimg",
+    "consectetur",
+    "deliveroo",
+    "inputfield",
+    "opsz",
+    "personalised",
+    "wght"
+  ]
 }
