--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,14 @@
     "bgimg",
     "consectetur",
     "deliveroo",
+    "faqtext",
     "inputfield",
+    "navtext",
     "opsz",
     "personalised",
     "sidenav",
+    "sidenavbtn",
+    "signup",
     "wght"
   ]
 }
