feat: landing page UI
fixing of landing page UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,15 @@
     "deliveroo",
     "faqtext",
     "inputfield",
+    "landingh",
+    "logintext",
+    "lpgrow",
     "navtext",
     "opsz",
     "personalised",
+    "searchbar",
+    "searchbtn",
+    "serchbar",
     "sidenav",
     "sidenavbtn",
     "Signin",
